apps/sample-nginx/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: sample-nginx-gateway
  namespace: apps
spec:
  gatewayClassName: cilium
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: Same

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sample-nginx
  namespace: apps
spec:
  parentRefs:
    - name: sample-nginx-gateway
  hostnames:
    - test.cloudijs.nl
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: sample-nginx
          port: 80
